--- a/login.html
+++ b/login.html
@@ -104,7 +104,7 @@
 
                         <div class="form-group row">
                             <div class="col-sm-10 offset-lg-2 text-left">
-                                <a href="#" class="mt-3 reset-password--color">Can't remember your password?</a>
+                                <a href="forget_password.html" class="mt-3 reset-password--color">Can't remember your password?</a>
                                 <button type="submit" class="btn btn--primary btn-block mt-4 mb-4 btn--shadow">Sign In</button>
                             </div>
                         </div>
