--- a/subscription.html
+++ b/subscription.html
@@ -126,10 +126,12 @@
 			<div class="row justify-content-center align-center">
 				<div class="col-lg-6 my-3 border-left border-right">
 
-					<h6 class="font-weight-bold font-13">MONTHLY SUBSCRIPTION</h6>
-					<h5 class="" style="font-weight: 400;">Unlimited access on any device for a month.</h5>
+					<h6 class="font-weight-bold font-13">ANNUAL SUBSCRIPTION</h6>
+					<h5 class="" style="font-weight: 400;">Unlimited access on any device annually.</h5>
 					<hr />
-					<p class="font-weight-600">₦1,000 ($2.8)</p>
+					<p class="font-weight-bold mb-1">At ₦500 ($1.4)/ month (save 50%)</p>
+					<p class="font-weight-bold mb-1">₦6,000 ($16.5) for 1 Year</p>
+
 
 				</div>
 
@@ -138,15 +140,15 @@
 					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
 			</div>
-
 
 			<div class="row justify-content-center align-center">
 				<div class="col-lg-6 my-3 border-left border-right">
 					<h6 class="font-weight-bold font-13">BI-ANNUAL SUBSCRIPTION</h6>
 					<h5 class="" style="font-weight: 400;">Unlimited access on any device for 6 months.</h5>
 					<hr />
+					<p class="font-weight-bold mb-1">At ₦700 ($2)/ month (Save 30%)</p>
 					<p class="font-weight-bold mb-1">₦4,200 ($11.5) for 6 month</p>
-					<p class="font-weight-bold">At ₦700 ($2)/ month (Save 30%)</p>
+
 				</div>
 
 				<div class="col-lg-4 text-lg-center my-3">
@@ -159,11 +161,10 @@
 			<div class="row justify-content-center align-center">
 				<div class="col-lg-6 my-3 border-left border-right">
 
-					<h6 class="font-weight-bold font-13">ANNUAL SUBSCRIPTION</h6>
-					<h5 class="" style="font-weight: 400;">Unlimited access on any device annually.</h5>
+					<h6 class="font-weight-bold font-13">MONTHLY SUBSCRIPTION</h6>
+					<h5 class="" style="font-weight: 400;">Unlimited access on any device for a month.</h5>
 					<hr />
-					<p class="font-weight-bold mb-1">₦6,000 ($16.5) for 1 Year</p>
-					<p class="font-weight-bold mb-1">At ₦500 ($1.4)/ month (save 50%)</p>
+					<p class="font-weight-600">At ₦1,000 ($2.8) monthly renewal</p>
 
 				</div>
 
@@ -172,6 +173,8 @@
 					<p class="small mt-2 mb-lg-0">You can cancel anytime.</p>
 				</div>
 			</div>
+
+
 		</div>
 
 
