--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -190,10 +190,13 @@
 						<a href="tel:+2347067596254" class="phone">+234 7067 596 254</a>
 
 						<ul class="list-inline mt-3">
-							<li class="list-inline-item mr-2"><a href="https//twitter.com/"><img src="img/linkedin.svg" alt="Location" class="img-fluid" /></a></li>
-							<li class="list-inline-item mx-2"><a href="https//twitter.com/" target="_blank" title="Twitter profile"><img src="img/twitter.svg" /></a></li>
-							<li class="list-inline-item mx-2"><a href="https://facebook.com/" target="_blank" title="Facebook Profile"><img src="img/facebook.svg" /></a></li>
-							<li class="list-inline-item mx-2"><a href="https://instagram.com/" target="_blank" title="Instagram Profile"><img src="img/instagram.svg" /></a></li>
+							<li class="list-inline-item mr-2"><a href="https://www.linkedin.com/company/businessiq-magazine/?viewAsKember=true"><img src="img/linkedin.svg" alt="Location" class="img-fluid" /></a></li>
+
+							<li class="list-inline-item mx-2"><a href="http://www.twitter.com/businessiqafri1" target="_blank" title="Twitter profile"><img src="img/twitter.svg" /></a></li>
+
+							<li class="list-inline-item mx-2"><a href="http://www.facebook.com/biziqafrica" target="_blank" title="Facebook Profile"><img src="img/facebook.svg" /></a></li>
+
+							<li class="list-inline-item mx-2"><a href="http://www.instagram.com/businessiqafrica" target="_blank" title="Instagram Profile"><img src="img/instagram.svg" /></a></li>
 						</ul>
 					</div>
 					<!-- /.about-widget -->
@@ -245,7 +248,6 @@
 				<!-- /.bottom-footer -->
 			</div>
 		</div>
-
 
 	</body>
 	<script src="js/jquery.min.js"></script>
