category / author update

--- a/author.html
+++ b/author.html
@@ -182,16 +182,29 @@
                         </div>
 
                     </div>
+
+
+                    <div class="row justify-content-center">
+                        <div class="col-lg-6 my-3 text-center">
+                            <a href="#" class="btn btn--primary rounded-0 btn-block my-3 py-3">Load more articles</a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-lg-4 my-3">
                     <h3 class="mb-4">Get the Latest Delivered Straight to Your Inbox</h3>
                     <form>
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Email</label>
+                            <label for="full_name">Full Name</label>
+                            <input type="text" class="form-control rounded-0" id="full_name">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="email">Email</label>
                             <input type="email" class="form-control rounded-0" id="email" aria-describedby="emailHelp">
                             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                         </div>
+
                         <div class="form-check">
                             <input type="checkbox" class="form-check-input" id="exampleCheck1">
                             <label class="form-check-label" for="exampleCheck1">I have read and agree to BusinessIQ <a href="privacy_policy.html">Privacy Policy</a>.</label>
