--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
 			<div class="row justify-content-center">
 				<div class="col-lg-3 text-center">
-					<a href="magazine.html" class="btn btn--primary rounded-0 btn-block my-3 py-3">Read more articles</a>
+					<a href="blog.html" class="btn btn--primary rounded-0 btn-block my-3 py-3">Read more articles</a>
 				</div>
 			</div>
 
@@ -450,10 +450,6 @@
 				<!-- /.bottom-footer -->
 			</div>
 		</div>
-
-
-
-
 		<!--
 
 <div class="container latest" style="background-image: url(img/5d816b07d26938bccbdbcc62_image-home-mission-circle.svg);
