--- a/manage_account.html
+++ b/manage_account.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="author" content="BusinessIQ Africa" />
-		<title>The Pan African Magazine for entrepreneurs - BusinessIQ Africa</title>
+		<title>Manage your account details | The Pan African Magazine for entrepreneurs - BusinessIQ Africa</title>
 		<script>
 			/* You can add more configuration options to webfontloader by previously defining the WebFontConfig with your options */
 			if (typeof WebFontConfig === "undefined") {
@@ -49,6 +49,33 @@
 		<!--		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed:400,500,600,700|Source+Sans+Pro:300, 400,500,600&display=swap" rel="stylesheet">-->
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
+		<style>
+			.element-header{
+				border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+				padding-bottom: 1rem;
+				position: relative;
+				z-index: 1;
+			}
+
+			.element-header::after {
+				content: "";
+				background-color: #047bf8;
+				width: 25px;
+				height: 4px;
+				border-radius: 0px;
+				display: block;
+				position: absolute;
+				bottom: -3px;
+				left: 0px;
+			}
+
+			.subscription_card {
+				border-radius: 6px;
+				background-color: #fff;
+				-webkit-box-shadow: 0px 2px 4px rgba(126, 142, 177, 0.12);
+				box-shadow: 0px 2px 4px rgba(126, 142, 177, 0.12);
+			}
+		</style>
 	</head>
 
 	<body>
@@ -116,77 +143,81 @@
 			<div class="row">
 				<div class="col-lg-7">
 					<div class="row">
-						<div class="col-lg-6 my-3">
-							<div class="h-100">
-								<h1>Hi</h1>
-							</div>
+						<div class="col-lg-12 my-3">
+							<h6 class="element-header">
+								Subscription Details
+							</h6>
 						</div>
 
 
-						<div class="col-lg-6 my-3">
-							<div class="card h-100">
-								<h1>Hi</h1>
+						<div class="col-lg-12 my-3">
+							<div class="border subscription_card h-100 p-3">
+								<h5>Current Plan</h5>
+								<div class="dropdown-divider"></div>
+								<div class="my-3">
+									<ul class="list-inline list-unstyled">
+										<li class="list-inline-item small">Start Date: 12/03/2020</li>
+										<li class="list-inline-item small float-lg-right">Next Renewal Date: 12/03/2020</li>
+									</ul>
+									<p class="small"></p>
+									<h6 class="font-weight-bold font-13">ANNUAL SUBSCRIPTION</h6>
+									<h5 class="" style="font-weight: 400;">Unlimited access on any device annually.</h5>
+
+									<a href="subscription.html" class="btn btn--primary mt-3 btn--shadow px-5">Upgrade Plan</a>
+									<a href="#" class="btn btn-danger mt-3 btn--shadow px-4 ml-lg-4">Cancel Subscription</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-lg-5 my-3">
-					<div class="border h-100 pt-3">
-						<form class="px-md-3" id="sign_in_wrapper" action="subscription.html" method="get">
+					<div class="h-100 border pt-3 subscription_card">
+						<form class="px-3" id="sign_in_wrapper" action="subscription.html" method="get">
 
 							<div class="form-group row">
-								<div class="col-sm-10 offset-lg-1">
-
-									<h4 class="text-center">Profile Details</h4>
-
+								<div class="col-sm-12">
+									<h6 class="element-header">
+										Profile Information
+									</h6>
 								</div>
+
+
 							</div>
 
 							<div class="form-group row">
 
 								<div class="col-sm-6">
 									<label for="fname" class="">First Name</label>
-									<input type="text" class="form-control" id="fname" name="fname" placeholder="First Name" autocomplete="given-name">
+									<input type="text" class="form-control" id="fname" name="fname" disabled placeholder="First Name" autocomplete="given-name">
 								</div>
 
 
 								<div class="col-sm-6">
 									<label for="lname" class="">Last  Name</label>
-									<input type="text" class="form-control" id="lname" name="lname" placeholder="Last Name" autocomplete="family-name">
+									<input type="text" class="form-control" id="lname" name="lname" disabled placeholder="Last Name" autocomplete="family-name">
 								</div>
 							</div>
 
 							<div class="form-group row">
 								<div class="col-sm-12">
 									<label for="email" class="">Email</label>
-									<input type="text" class="form-control" id="email" name="email" placeholder="Enter your email" autocomplete="email">
+									<input type="text" class="form-control" id="email" name="email" placeholder="Enter your email" disabled autocomplete="email">
 								</div>
 							</div>
 
 							<div class="form-group row">
 								<div class="col-sm-6">
 									<label for="phone" class="">Phone number</label>
-									<input type="text" class="form-control" id="phone" name="phone" placeholder="Enter your phone number" autocomplete="tel">
+									<input type="text" class="form-control" id="phone" name="phone" placeholder="Enter your phone number" disabled autocomplete="tel">
 								</div>
 
 
 								<div class="col-sm-6">
 									<label for="date_of_birth" class="">Date of birth</label>
-									<input type="text" class="form-control date" id="date_of_birth" name="date_of_birth">
+									<input type="text" disabled class="form-control date" id="date_of_birth" name="date_of_birth">
 								</div>
 							</div>
-
-							<div class="form-group row">
-
-							</div>
-
-							<div class="form-group row">
-								<div class="col-sm-12 text-left">
-									<button type="submit" class="btn btn--primary btn-block mt-4 mb-4 btn--shadow">Update Profile</button>
-								</div>
-							</div>
-
 
 						</form>
 					</div>
