--- a/index.html
+++ b/index.html
@@ -107,6 +107,10 @@
 								</ul>
 							</li>
 
+							<li class="nav-item mr-md-2 my-md-0 postion-relative">
+								<a class="nav-link bold" href="javascript.void()" data-toggle="modal" data-target=".bd-example-modal-lg"><img src="img/search.svg" alt="search" class="img-fluid" width="20"></a>
+							</li>
+
 						</ul>
 					</div>
 				</nav>
@@ -471,6 +475,21 @@ That Convert More</h1> </a>
 </div>
 </div>
 -->
+
+
+		<!-- Search modal -->
+		<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-lg" style="max-width: 95%;">
+				<div class="modal-content">
+					<form>
+						<div class="form-group mb-0" style="position: relative">
+							<input type="text" class="rounded-0 form-control" id="search" placeholder="search">
+							<img src="img/search.svg" alt="search icon" style="position: absolute; right: 10px; top: 10px;" width="25"/>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
