--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
 						<h5 class="title">Site map</h5>
 						<ul class="list-unstyled">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="about.html">About us</a></li>
 							<li><a href="magazine.html">Magazine</a></li>
 							<li><a href="case_study.html">Case Studies</a></li>
 							<li><a href="book.html">Books</a></li>
