--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                     </div>
 
 
-                    <h1 class="font-weight-bold">What we do</h1>
+                    <h1 class="font-weight-bold mt-3">What we do</h1>
                     <p>We are dedicated to finding and interviewing successful entrepreneurs in Africa. We are concerned about listening and retelling their tough, but success true stories in such a way it will inspire and help your business growth. We are committed to making sure their stories strengthen your entrepreneurial desire and that of others around the globe.</p>
 
                     <p>Every month, we work tirelessly to make sure an issue of BusinessIQ magazine is available to you on your mobile, tablet or laptop. Every issue of the magazine is wrapped around the inspirational business story of a successful entrepreneur. Such story—interview—is, most times, locked around many years of struggles, disappointments, failures and success that can help you become a successful entrepreneur without re-inventing the wheel.</p>
