updates to welcome email

--- a/email.html
+++ b/email.html
@@ -421,7 +421,23 @@ table {border-collapse: collapse !important;}
                                                                     </font> </p>
 
                                                                 <p class="bodycopy" style="margin-top:0px; font-size:16px; line-height:26px; margin-bottom:0px;"> <font style="color:#03363D; font-size:16px; line-height:26px; font-family: Helvetica, Arial;">
-                                                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+                                                                    Welcome and thank you for subscribing to BusinessIQ Africa,  the Pan-African platform for
+                                                                    entrepreneurs like you. We believe, this platform will help you in your entrepreneurial journey and
+                                                                    bring your dream of turning your business into a successful enterprise.
+                                                                    <br><br>
+                                                                    </font> </p>
+
+                                                                <p class="bodycopy" style="margin-top:0px; font-size:16px; line-height:26px; margin-bottom:0px;"> <font style="color:#03363D; font-size:16px; line-height:26px; font-family: Helvetica, Arial;">
+                                                                    The articles, bullet books, case studies and interviews of business leaders are carefully researched to
+                                                                    help you become a better entrepreneur and grow your business exponentially. Do take advantage of
+                                                                    all these resources as best as you can.
+                                                                    <br><br>
+                                                                    </font> </p>
+
+                                                                <p class="bodycopy" style="margin-top:0px; font-size:16px; line-height:26px; margin-bottom:0px;"> <font style="color:#03363D; font-size:16px; line-height:26px; font-family: Helvetica, Arial;">
+                                                                    If there is any enquiry, feel free to send mail to <a href="mailto:info@businessiqafrica.com">info@businessiqafrica.com</a> and you will receive a
+                                                                    response within 48 hours. Once again, welcome to the BusinessIQ Africa family. Meeting your
+                                                                    entrepreneurial needs is our utmost priority.  Do enjoy your subscription.
                                                                     <br><br>
                                                                     </font> </p>
                                                             </td>
@@ -462,13 +478,7 @@ table {border-collapse: collapse !important;}
                                                             <td class="padTop35" style="padding-top:40px;padding-bottom:0px;padding-left:80px;padding-right:80px;background-color:#ffffff; width:100%;text-align:left;">
                                                                 <p class="bodycopy" style="margin-top:0px; font-size:16px; line-height:26px; margin-bottom:0px;"> <font style="color:#03363D; font-size:16px; line-height:26px; font-family: Helvetica, Arial;">
                                                                     <br>
-
-
-
-                                                                    Cheers,<br>
-                                                                    Team
-                                                                    Business IQ
-
+                                                                    Thank you.
                                                                     </font> </p>
                                                             </td>
                                                         </tr>
