blog post social share addition

--- a/blog_detail.html
+++ b/blog_detail.html
@@ -148,6 +148,22 @@
                             </div>
                         </div>
                     </div>
+                    <p class="text-center mt-3 font-weight-bold">Share post:</p>
+                    <ul class="list-inline mt-3 text-center social_share">
+
+                        <li class="list-inline-item mx-3 mx-lg-4"><a  href="https//linkedin.com/" title="Share to linkedin"><img src="img/linkedin.svg" alt="Linkedin social share" class="img-fluid" loading="lazy" /></a></li>
+
+
+                        <li class="list-inline-item mx-3 mx-lg-4"><a href="https//twitter.com/" target="_blank" title="Tweet this post"><img src="img/twitter.svg" alt="Tweet this post" loading="lazy" /></a></li>
+
+
+                        <li class="list-inline-item mx-3" mx-lg-4><a href="https://facebook.com/" target="_blank" title="Share post to Facebook"><img src="img/facebook.svg" alt="Share post to Facebook" loading="lazy"/></a></li>
+
+
+                        <li class="list-inline-item mx-3"><a href="https://instagram.com/" target="_blank" title="Share post to Instagram"><img src="img/instagram.svg" alt="Share post to Instagram" loading="lazy"/></a></li>
+
+
+                    </ul>
                 </div>
             </div>
         </div>
